fix: paginator bug ang css wrap bug

--- a/src/app/tasks/list/list.component.scss
+++ b/src/app/tasks/list/list.component.scss
@@ -21,3 +21,8 @@ mat-spinner {
   margin-left: 20%;
   box-shadow: 1px 1px 5px rgba($color: #000000, $alpha: 0.5);
 }
+
+
+.dis {
+  word-wrap: break-word;
+}
